2010-04-06  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tcl.m4          Sync with Tcl version
	* unix/tcl.m4
	* win/configure       (regenerate with autoconf-2.59)
	* unix/configure      [Bug 2982540] configure and install* script files
	                      should always have LF

2010-03-29  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/tcl.m4             Only test for -visibility=hidden with gcc
	                          (Second remark in [Bug 2976508])
	* unix/configure          regen

2010-03-29  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tkUnixRFont.c (GetFont): [Bug 2978410]: Do not use non-constant
	initializers for structures, since HP-UX cc doesn't like it.

2010-03-28  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkTagSet.c, generic/ttk/ttkTheme.c,
	* generic/ttk/ttkTheme.h, generic/ttk/ttkTreeview.c,
	* generic/ttk/ttkWidget.h, doc/ttk_treeview.n,
	* tests/ttk/treetags.test: ttk::treeview widget: add 'tag names',
	'tag add', and 'tag remove' methods.

2010-03-23  Donal K. Fellows  <dkf@users.sf.net>

	* unix/configure.in, unix/Makefile.in: [Bug 2965133]: Get rid of the
	spurious NONE and some pointless quotes that were causing problems
	with building Tk on OSX. Overall bug might not yet be solved.

2010-03-17  Donal K. Fellows  <dkf@users.sf.net>

	* library/entry.tcl:	 [Bug 2971663]: Make the <Up> and <Down> keys
	* library/ttk/entry.tcl: explicitly do nothing, since Tk-on-Cocoa will
	generate (invisible zero-width) characters for them otherwise. The
	explicitly empty bindings are harmless on other platforms.

2010-03-16  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/.cvsignore:	Ignore .a and .so

2010-03-12  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/rules.vc:		Fix [Tcl Bug 2967340]: Static build failure
	* win/makefile.vc:
	* win/.cvsignore:

2010-03-12  Donal K. Fellows  <dkf@users.sf.net>

	* library/iconlist.tcl:		Factor out some of the machinery for
	* library/megawidget.tcl:	making a megawidget framework. Not a